# BIOS-Viewer

./: .gitignore  BinaryTool.cpp  CMakeLists.txt  HexViewDialog.cpp  HexViewDialog.h  HexViewDialog.ui  InfoWindow.cpp  InfoWindow.h  InfoWindow.ui  PeCoffInfo.cpp  SearchDialog.cpp  SearchDialog.h  SearchDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  UefiDecode.cpp  hexviewwidget.cpp  hexviewwidget.h  hexviewwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Window/: BinaryTool.cpp  BiosSearch.cpp  BiosSearch.h  BiosSearch.ui  BiosWindow.cpp  BiosWindow.h  BiosWindow.ui  CapsuleWindow.cpp  CapsuleWindow.h  CapsuleWindow.ui  HexViewDialog.cpp  HexViewDialog.h  HexWindow.cpp  HexWindow.h  InfoWindow.cpp  InfoWindow.h  InfoWindow.ui  MergeFilesWindow.cpp  MergeFilesWindow.h  PeCoffInfo.h  PeCoffInfo.ui  RightMenu.cpp  SearchDialog.cpp  SearchDialog.h  SearchDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  StartWindow.cpp  StartWindow.h  StartWindow.ui  TabWindow.cpp  TabWindow.h  TabWindow.ui  UefiDecode.cpp  inputdialog.cpp  inputdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Window/BiosView/: BinaryTool.cpp  BiosWindow.cpp  BiosWindow.h  BiosWindow.ui  CustomMenu.cpp  RightMenu.cpp  UefiDecode.cpp
Window/CapsuleView/: CapsuleWindow.cpp  CapsuleWindow.h  CapsuleWindow.ui
Window/HexView/: CustomMenu.cpp  HexEdit.cpp  HexView.cpp  HexView.h  HexViewDialog.cpp  HexViewDialog.h  HexViewDialog.ui  HexViewWidget.cpp  HexViewWidget.h  HexViewWidget.ui  HexWindow.cpp  HexWindow.h
Window/InfoWindow/: InfoWindow.cpp  InfoWindow.h  InfoWindow.ui
Window/Input/: inputdialog.cpp
Window/Search/: BiosSearch.cpp  BiosSearch.h  BiosSearch.ui  HexSearch.cpp  HexSearch.h  HexSearch.ui  SearchDialog.cpp  SearchDialog.h  SearchDialog.ui
Window/Setting/: SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
Window/Start/: StartWindow.cpp  StartWindow.h  StartWindow.ui
Window/TabWindow/: TabWindow.cpp  TabWindow.h  TabWindow.ui
Window/Tool/: MergeFilesWindow.cpp  MergeFilesWindow.h  MergeFilesWindow.ui
font/: Fonts.qrc
include/: Acpi.h  Base.h  BaseMemoryLib.cpp  BaseMemoryLib.h  BootGuard.h  ELF.h  FspHeader.h  GbE.h  GuidDefinition.h  ME.h  Microcode.h  PeImage.h  PiFirmwareFile.h  PiFirmwareVolume.h  SymbolDefinition.h  VariableFormat.h  descriptor.h
include/C/: Base.h  BaseMemoryLib.h  Common.h
include/EDKTool/: BinaryParse.h  Fce.h  IfrParse.h  MdeModuleHii.h  UefiInternalFormRepresentation.h
include/UEFI/: Acpi.h  BiosGuard.h  BootGuard.h  CapsuleSpec.h  ELF.h  FIT.h  FbmDef.h  FspHeader.h  GUID.h  GbE.h  GuidDatabase.h  GuidDefinition.h  ME.h  Microcode.h  PcdDataBaseSignatureGuid.h  PeImage.h  PiFirmwareFile.h  PiFirmwareVolume.h  UefiStatus.h  VariableFormat.h  descriptor.h
lib/: BaseLib.cpp  BaseLib.h  BiosGuard.cpp  BootGuard.cpp  CapsuleClassLib.cpp  CapsuleClassLib.h  CapsuleLib.cpp  CapsuleLib.h  DataModel.cpp  DataModel.h  ElfLib.cpp  ElfLib.h  GuidDefinition.cpp  Model.cpp  Model.h  PeCoffLib.h  Section.cpp  Volume.cpp  Volume.h  iwfi.cpp  iwfi.h  uefilib.cpp  uefilib.h
lib/BaseUefiDecompress/: BaseUefiDecompressLib.c  BaseUefiDecompressLib.cpp  BaseUefiDecompressLib.h  BaseUefiDecompressLibInternals.h  UefiDecompressLib.h
lib/BrotliDecompress/: BrotliDecompress.cpp  BrotliDecompressLib.h
lib/BrotliDecompress/brotli/common/: rename.py
lib/BrotliDecompress/brotli/lib/: BrotliCommon.lib  BrotliDec.lib  BrotliEnc.lib
lib/Capsule/: CapsuleHeader.cpp  CapsuleHeader.h
lib/Compatibility/: BaseMemoryLib.cpp  Common.cpp
lib/FCE/: Expression.cpp  Fce.cpp  IfrParse.cpp
lib/Feature/: AcmClass.cpp  AcmClass.h  AcpiClass.cpp  AcpiClass.h  BiosGuardClass.cpp  BiosGuardClass.h  FitClass.cpp  FitClass.h  FspHeader.cpp  FspHeader.h  MicrocodeClass.cpp  MicrocodeClass.h  fspbootmanifestclass.cpp  fspbootmanifestclass.h
lib/IfwiRegion/: BiosRegion.cpp  BiosRegion.h  EcRegion.cpp  EcRegion.h  FlashDescriptorRegion.cpp  FlashDescriptorRegion.h  GbeRegion.cpp  GbeRegion.h  MeRegion.cpp  MeRegion.h  OsseRegion.cpp  OsseRegion.h  PdtRegion.cpp  PdtRegion.h
lib/Lz4Decompress/: Lz4.cpp  Lz4.h  Lz4Decompress.h  Lz4DecompressLib.cpp  Lz4Hc.cpp
lib/Lz4Decompress/Sdk/: lz4.cpp  lz4hc.cpp
lib/LzmaDecompress/: LzmaDecompress.cpp  LzmaDecompressLib.h  LzmaDecompressLibInternal.h
lib/LzmaDecompress/Sdk/C/: LzmaLib.lib  MtDec.h
lib/Openssl/lib/: libssl.lib
lib/Openssl/lib/windows/: libcrypto.lib
lib/QHexView/: HexEdit.cpp  qhexview.cpp  qhexview.h
lib/UefiFileSystem/: CommonSection.cpp  CommonSection.h  CompressedVolume.cpp  CompressedVolume.h  Elf.cpp  Elf.h  FfsFile.cpp  FfsFile.h  FirmwareVolume.cpp  FirmwareVolume.h  NvVariable.cpp  NvVariable.h  Vpd.cpp  Vpd.h
logo/: BIOS Viewer.rc  Images.qrc  dark_mode.qss  light_mode.qss
theme/dark/: darkstyle.qss
tool/: DecParser.py  GuidDifinition.txt  GuidName.txt  GuidParser.py  Setup.iss
tool/Encrypt/EncryptedString/: CMakeLists.txt  main.cpp
tool/GUID/: Data1Set.pickle  GuidDifinition.txt  GuidName.txt  GuidNameSet.pickle  GuidParser.py
tool/SaveFile/QtSaveFile/: CMakeLists.txt  main.cpp
